# milkshake-email

./: .gitignore  Cargo.toml  LICENSE  package.json  wrangler.toml
src/: lib.rs
