[package]
name = "milkshake-email"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.1.0", features = ["http"] }
http = "1.1.0"
console_error_panic_hook = "0.1.6"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
